fix: replaced old deprecated classes/methods, lombok use, bump version